fixed delete button on small to medium screens

--- a/workout.css
+++ b/workout.css
@@ -88,6 +88,13 @@ h1 {
 	}
 }
 
+@media only screen and (min-width: 637px){
+	#Delete {
+		margin-left: 5px;
+		margin-top: 0px;
+	}
+}
+
 @media only screen and (max-width: 500px){
 	#table-container{
 		overflow-x: auto;
